--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,12 +3,13 @@ body {
   margin: 0;
 }
 
-html, body, #app, .container {
+html, body, #app {
   min-height: 100vh;
   max-height: 100vh;
   max-width: 100%;
 }
 
+/*
 input[type="text"] {
   margin: 10px 0px;
   height: 60px;
@@ -54,4 +55,65 @@ input[type="submit"]:hover {
   -moz-box-shadow: -10px 10px 0px rgba(50,50,50,0.15);
   box-shadow: -10px 10px 0px rgba(50,50,50,0.15);
   background-color: #1e1e1e;
+}*/
+
+/*-------------------NEW CSS------------------*/
+.loginForm{
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
+
+.form-signin {
+  
+
+  .form-signin-heading,
+	.checkbox {
+    
+    color:#e4d3ae;
+    margin-left: 16px;
+	}
+
+	.checkbox {
+	  font-weight: normal;
+	}
+
+	.form-control {
+	  position: relative;
+	  font-size: 16px;
+	  height: auto;
+	  padding: 10px;
+		// @include box-sizing(border-box);
+
+		&:focus {
+		  z-index: 2;
+		}
+	}
+
+	input[type="text"] {
+	  width:100%;
+	  border-radius: 4px;
+    border: 1px solid wheat;
+    height: 44px;
+	}
+
+	input[type="password"] {
+    width:100%;
+	  border-radius: 4px;
+    border: 1px solid wheat;
+    height: 44px;
+	}
+}
+
+.loginContainer{
+  // position: relative;
+  border-radius: 14px;
+    box-shadow: 4px 4px 4px 4px wheat;
+    left:259px;
+   //height: auto !important;
+}
+
+.loginBackground{
+  background-image: url("../assets/background.jpg");
+  height:100vh;
+}
+
