--- a/src/styles/ChatApp.css
+++ b/src/styles/ChatApp.css
@@ -4,10 +4,12 @@
 }
 
 .messages {
-  overflow-y: scroll;
-  overflow-x: hidden;
+  /* overflow-y: scroll;
+  overflow-x: hidden; */
   flex-grow: 1;
   padding: 20px;
+  height:500px;
+  overflow-y: auto;
 }
 
 h3 {
@@ -42,8 +44,8 @@ h3 {
 }
 
 .message.from-me .message-body {
-  background-color: #af9570;
-  color: white;
+  background-color: darkcyan;
+  color: black;
 }
 
 .message {
@@ -52,7 +54,7 @@ h3 {
 .message-body {
   max-width: 80%;
   display: inline-block;
-  padding: 20px;
+  padding: 8px;
   background-color: #eee;
   border: 1px;
   border-radius: 5px;
@@ -62,7 +64,7 @@ h3 {
 .username {
   font-weight: bold;
   font-size: 0.9rem;
-  color: #999;
+  color: black;
   margin-bottom: 5px;
 }
 
